--- a/src/main/resources/templates/perspective/perspective-view.html
+++ b/src/main/resources/templates/perspective/perspective-view.html
@@ -510,7 +510,8 @@
                         </div>
                         <table class="table table-hover table-sm" style="width: 800px">
                             <thead class="table-secondary" style="text-align: left; vertical-align: top">
-                            <td style="width: 450px; text-align: left; font-size: 13px">Наименование документа</td>
+                            <td style="width: 450px; text-align: left; font-size: 13px">Расчет стоимости
+                                оборудования и материалов</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Автор загрузки</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Дата и время</td>
                             <td style="width: 50px; text-align: center"></td>
@@ -576,7 +577,7 @@
                         </div>
                         <table class="table table-hover table-sm" style="width: 800px">
                             <thead class="table-secondary" style="text-align: left; vertical-align: top">
-                            <td style="width: 450px; text-align: left; font-size: 13px">Наименование документа</td>
+                            <td style="width: 450px; text-align: left; font-size: 13px">Расчет стоимости объемов работ</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Автор загрузки</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Дата и время</td>
                             <td style="width: 50px; text-align: center"></td>
@@ -642,7 +643,7 @@
                         </div>
                         <table class="table table-hover table-sm" style="width: 800px">
                             <thead class="table-secondary" style="text-align: left; vertical-align: top">
-                            <td style="width: 450px; text-align: left; font-size: 13px">Наименование документа</td>
+                            <td style="width: 450px; text-align: left; font-size: 13px">ТКП, счета и прочие документы</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Автор загрузки</td>
                             <td style="width: 150px; text-align: left; font-size: 13px">Дата и время</td>
                             <td style="width: 50px; text-align: center"></td>
