--- a/src/main/resources/templates/stock/m_instrument-view.html
+++ b/src/main/resources/templates/stock/m_instrument-view.html
@@ -506,7 +506,19 @@
                 </thead>
                 <tbody class="body">
                 <tr th:each="mInstr:${measInstrumentConditionAUD}">
-                    <td th:text="${mInstr.exampleRevEntity.userName}">
+                    <td>
+                    <span th:with="x=${mInstr.exampleRevEntity.employee != null}">
+                        <span th:if="${x}">
+                            <a th:href="@{/general/employee/employeeView/{id}(id=${mInstr.exampleRevEntity.employee.empId})}">
+                                <button style="width: 140px; text-align: left" type="button"
+                                        class="btn btn-outline-dark btn-sm">
+                                    <span th:text="${mInstr.exampleRevEntity.employee}">
+                                    </span></button></a>
+                        </span>
+                        <span th:unless="${x}"><span th:text="${'Администратор'}"></span>
+                        </span>
+                    </span>
+                    </td>
                     <td th:text="${#temporals.format(mInstr.exampleRevEntity.localDateTimeModified,
                     'dd-MM-yyyy HH:mm:ss')}">
                     <td>
